--- a/projectData/projects.json
+++ b/projectData/projects.json
@@ -1,1 +1,1 @@
-["ecom-demo", "trtz.dev", "investment-journey-calculator"]
+["chat-ai-portfolio", "ecom-demo", "projects.trtz.dev", "investment-journey-calculator"]
