--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@react-spring/web": "^9.7.2",
 		"@vercel/analytics": "^1.0.1",
 		"framer-motion": "^7.10.3",
 		"next": "^13.4.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-icons": "^4.8.0"
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "22",
 		"@types/react": "^18.2.5",
 		"@types/react-dom": "^18.2.4",
 		"autoprefixer": "^10.4.14",
+		"baseline-browser-mapping": "^2.9.15",
 		"eslint": "^8.39.0",
 		"eslint-config-next": "^13.4.1",
 		"lorem-ipsum": "^2.0.8",
