Modernize glowing effect with dominant color

--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
 	},
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
+		"clsx": "^2.1.1",
 		"framer-motion": "^7.10.3",
+		"motion": "^12.26.2",
 		"next": "^13.4.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "22",
